--- a/src/logging.ini
+++ b/src/logging.ini
@@ -3,7 +3,7 @@
 # Copyright (c) 2017-, Stephen B. Hope
 # All rights reserved.
 #
-# This source code is licensed under the BSD-style license found in the LICENSE file in the root directory of this
+# This source code is licensed under the BSD-style license found in the LICENSE.md file in the root directory of this
 # source tree. An additional grant of patent rights can be found in the PATENTS file in the same directory.
 
 [formatters]
